--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 GITHUB_PERSONAL_TOKEN='your-token <https://github.com/settings/tokens>'
 TESTE=
 
-DB_DATABASE=
+DB_DATABASE=asdassda
 DB_USER=
 DB_PASSWORD=aaaaa
 # DB_TABLES=asdasasdasd
